--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "crypto-testing",
+  "name": "@andybry/crypto-testing",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "decrypt.js",
