--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "ethereumjs-util": "^7.0.4"
+  }
 }
